# cryptopilot

./: .env.example  README.md  ROADMAP.md  config.toml.example  pyproject.toml  snapshot.sh
cryptopilot/: __init__.py  main.py
cryptopilot/analysis/: engine.py  indicators.py  registry.py
cryptopilot/analysis/strategies/: base.py  mean_reversion.py  momentum.py  trend_following.py
cryptopilot/cli/: __init__.py  formatters.py
cryptopilot/cli/commands/: analyze.py  collect.py  portfolio.py  system.py
cryptopilot/collectors/: gap_filler.py  market_data.py
cryptopilot/config/: settings.py
cryptopilot/database/: connection.py  models.py  repository.py  schema.sql
cryptopilot/portfolio/: manager.py
cryptopilot/providers/: base.py  coingecko.py  models.py  registry.py
cryptopilot/utils/: decimal_math.py  retry.py
tests/: test_portfolio.py
