[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptopilot"
version = "0.0.2"
description = "Cryptocurrency Trading Analysis Platform"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "mmrzaf", email = "mohammr.farkhonde12@esharif.edu"},
]
keywords = ["cryptocurrency", "trading", "analysis", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
analysis = [
    "ta-lib>=0.4.0",
    "scipy>=1.11.0",
]
backtesting = [
    "backtrader>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/mmrzaf/cryptopilot"
Documentation = "https://github.com/mmrzaf/cryptopilot#readme"
Repository = "https://github.com/mmrzaf/cryptopilot"
Issues = "https://github.com/mmrzaf/cryptopilot/issues"

[project.scripts]
cryptopilot = "cryptopilot.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cryptopilot*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "D", "S", "B"]
ignore = ["E501", "B008"]
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=cryptopilot",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["cryptopilot"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]
